--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
     "jest": "^15.1.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "react": "^15.3.1",
+    "react": "^15.6.1",
     "react-addons-test-utils": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "react-dom": "^15.6.1",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
@@ -93,7 +93,8 @@
     "classnames": "^2.2.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^0.14.0 || ^15.0.0",
+    "prop-types": "^15.5.10"
   },
   "jest": {
     "testPathDirs": [
